# ChangeLog for net-mail/grepmail
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/grepmail/ChangeLog,v 1.37 2012/02/07 10:46:46 eras Exp $

  07 Feb 2012; Eray Aslan <eras@gentoo.org> -grepmail-5.30.33.ebuild:
  remove old

  05 Feb 2012; Raúl Porcel <armin76@gentoo.org> grepmail-5.30.33.ebuild,
  grepmail-5.30.33-r1.ebuild:
  Drop sparc keywords

  04 Jan 2012; Brent Baude <ranger@gentoo.org> grepmail-5.30.33-r1.ebuild:
  Marking grepmail-5.30.33-r1 ppc for bug 391649

  01 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  grepmail-5.30.33-r1.ebuild:
  x86 stable wrt bug #391649

*grepmail-5.30.33-r1 (15 Feb 2011)

  15 Feb 2011; Torsten Veller <tove@gentoo.org> +files/5.30.33-midnight.patch,
  -grepmail-5.30.32.ebuild, +grepmail-5.30.33-r1.ebuild:
  Fix midnight Date_Init for Date::Manip>6 (#355067). Cleanup

  14 Jan 2011; Torsten Veller <tove@gentoo.org>
  +files/5.30.33-fix_nonexistent_mailbox_test.patch, grepmail-5.30.33.ebuild:
  Fix fix_nonexistent_mailbox_test (#296657)

  07 Mar 2008; Raúl Porcel <armin76@gentoo.org> grepmail-5.30.33.ebuild:
  sparc stable wrt #212470

  06 Mar 2008; nixnut <nixnut@gentoo.org> grepmail-5.30.33.ebuild:
  Stable on ppc wrt bug 212470

  06 Mar 2008; Dawid Węgliński <cla@gentoo.org> grepmail-5.30.33.ebuild:
  Stable on x86 (bug #212470)

*grepmail-5.30.33 (06 Mar 2008)

  06 Mar 2008; Torsten Veller <tove@gentoo.org> +grepmail-5.30.33.ebuild:
  Version bump (#212470).

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> -grepmail-5.30.ebuild:
  QA: Clean unused versions.

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org> grepmail-5.30.ebuild,
  grepmail-5.30.32.ebuild:
  Virtuals for perl-core

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org>
  grepmail-5.30.32.ebuild:
  Stable on ppc.

  20 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org>