@@ -1,11 +1,12 @@
-DEFINED_PHASES=compile install postinst postrm preinst prerm setup test unpack
-DEPEND=dev-perl/Inline dev-perl/TimeDate dev-perl/DateManip virtual/perl-Digest-MD5 >=dev-perl/Mail-Mbox-MessageParser-1.40.01
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=dev-perl/Inline dev-perl/TimeDate dev-perl/DateManip virtual/perl-Digest-MD5 >=dev-perl/Mail-Mbox-MessageParser-1.40.01 || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
 DESCRIPTION=Search normal or compressed mailbox using a regular expression or dates.
+EAPI=5
 HOMEPAGE=http://grepmail.sourceforge.net/
-KEYWORDS=~amd64 ppc x86
+KEYWORDS=~amd64 ~ppc ~x86
 LICENSE=GPL-2
-RDEPEND=dev-perl/Inline dev-perl/TimeDate dev-perl/DateManip virtual/perl-Digest-MD5 >=dev-perl/Mail-Mbox-MessageParser-1.40.01
+RDEPEND=dev-perl/Inline dev-perl/TimeDate dev-perl/DateManip virtual/perl-Digest-MD5 >=dev-perl/Mail-Mbox-MessageParser-1.40.01 || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
 SLOT=0
 SRC_URI=mirror://sourceforge/grepmail/grepmail-5.3033.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	perl-module	d93571ca1c77e98760e5aa406388b02d	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=c31076d560cfc613822e0b917dcd94d8
+_md5_=9eecb08dc0a3d1f287e9e9e8e3436050
